feat: achievements may now contain newlines , bold, and italics by using special markup

--- a/src/templates/achievement-block.hbs
+++ b/src/templates/achievement-block.hbs
@@ -45,7 +45,7 @@
         {{/if}}
       </div>
       {{#unless hideDetails}}
-        <p class="achievement-block__description">{{description}}</p>
+        <p class="achievement-block__description">{{enrichText description}}</p>
       {{/unless}}
     </div>
   </div>
