--- a/src/styles/fvtt-player-achievements.scss
+++ b/src/styles/fvtt-player-achievements.scss
@@ -299,13 +299,23 @@
     }
   }
 
+  .achievement-block__title-wrap {
+    display:flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+
+  .achievement-block__title-copy {
+    margin:5px;
+    cursor: pointer;
+  }
+
   .achievement-block__title {
     border-bottom: 1px solid black;
     align-content: center;
     display: flex;
     justify-content: center;
     justify-self: center;
-    align-content: center;
     align-items: center;
     align-self: center;
     font-size: 1.25em;
@@ -317,7 +327,6 @@
     display: flex;
     justify-content: center;
     justify-self: center;
-    align-content: center;
     align-items: center;
     align-self: center;
     font-size: 1.25em;
