--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="https://github.com/USER/PROJECT/releases/latest/download/module.zip">Latest Release: {% project_version tag short %}</a>
+      {% capture version_string %}{% project_version tag short %}{% endcapture %}
+        <a href="https://github.com/USER/PROJECT/releases/latest/download/module.zip" class="btn">Latest Release: {{ version_string | split: '-' | first }}</a>
       {% endif %}
     </header>
 
