--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <main id="content" class="main-content" role="main">
       <div style="display:flex;flex-direction:row;flex-wrap:nowrap;">
-      <nav style="width:fit-content;">
+      <nav style="width:fit-content;margin-right:1rem;">
         <ul></ul>
       </nav>
       <section>
