corrected tag storage issue

--- a/src/templates/add-achievement-sheet.hbs
+++ b/src/templates/add-achievement-sheet.hbs
@@ -141,7 +141,7 @@
     </div>
 
   <label for="achievement_tags" class="add-achievement-form__label">{{localize "fvtt-player-achievements.forms.add-achievement-form.tags"}}</label>
-  <input type="text" name="achievement_tags" id="achievement_tags" class="add-achievement-form__tags" value="{{overrides.achievement.tags}}"/>
+  <input type="text" name="achievement_tags" id="achievement_tags" class="add-achievement-form__tags" value="{{workingTags}}"/>
 
   <button type="submit" class="btn btn--primary add-achievement-form__submit">
     <i class="fas fa-plus"></i>
