--- a/src/templates/achievements-sheet.hbs
+++ b/src/templates/achievements-sheet.hbs
@@ -1,40 +1,40 @@
 <form autocomplete="off" name="achievements-sheet" class="achievements-sheet" >
   {{#if isDM}}
   <div class="achievements-sheet__dm-controls">
-    <button type="button" class="btn btn--primary fpa-nowrap" name="add-achievement" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.add-achievement"}}">
+    <button data-action="onAddAchievement" type="button" class="btn btn--primary fpa-nowrap" name="add-achievement" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.add-achievement"}}">
       <i class="fas fa-plus"></i>
       {{localize "fvtt-player-achievements.forms.achievements-sheet.add-achievement"}}
     </button>
-    <button type="button" class="btn btn--primary" name="export-achievements" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.export-achievements"}}">
+    <button data-action="onExportAchievements" type="button" class="btn btn--primary" name="export-achievements" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.export-achievements"}}">
       <i class="fas fa-download"></i>
       {{localize "fvtt-player-achievements.forms.achievements-sheet.export"}}
     </button>
-    <button type="button" class="btn btn--primary" name="import-achievements" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.import-achievements"}}">
+    <button data-action="onImportAchievements" type="button" class="btn btn--primary" name="import-achievements" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.import-achievements"}}">
       <i class="fas fa-upload"></i>
       {{localize "fvtt-player-achievements.forms.achievements-sheet.import"}}
     </button>
     <div style="flex-grow:1"></div>
-    <button type="button" class="btn btn--primary" style="max-width:50px" name="feedback" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.feedback"}}">
+    <button data-action="onFeedback" type="button" class="btn btn--primary" style="max-width:50px" name="feedback" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.feedback"}}">
       <i class="fas fa-comment"></i>
     </button>
-    <button type="button" class="btn btn--primary" style="max-width:50px" name="bugreport" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.bugreport"}}">
+    <button data-action="onBugReport" type="button" class="btn btn--primary" style="max-width:50px" name="bugreport" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.bugreport"}}">
       <i class="fas fa-bug"></i>
     </button>
-    <button type="button" class="btn btn--primary" style="max-width:50px" name="discord" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.discord"}}">
+    <button data-action="onDiscord" type="button" class="btn btn--primary" style="max-width:50px" name="discord" title="{{localize "fvtt-player-achievements.forms.achievements-sheet.discord"}}">
       <i class="fab fa-discord"></i>
     </button>
   </div>
   {{else}}
   <div class="achievements-sheet__player-controls">
-    <input type="checkbox" name="hide-awarded" id="hide-awarded" class="achievements-sheet__hide-awarded" {{#if hideAwarded}}checked{{/if}}>
+    <input data-action="onToggleHideAwarded" type="checkbox" name="hide-awarded" id="hide-awarded" class="achievements-sheet__hide-awarded" {{#if hideAwarded}}checked{{/if}}>
     <label for="hide-awarded">{{localize "fvtt-player-achievements.forms.achievements-sheet.hide-awarded"}}</label>
 
-    <input type="checkbox" name="hide-unawarded" id="hide-unawarded" class="achievements-sheet__hide-unawarded" {{#if hideUnawarded}}checked{{/if}}>
+    <input data-action="onToggleHideUnawarded" type="checkbox" name="hide-unawarded" id="hide-unawarded" class="achievements-sheet__hide-unawarded" {{#if hideUnawarded}}checked{{/if}}>
     <label for="hide-unawarded">{{localize "fvtt-player-achievements.forms.achievements-sheet.hide-unawarded"}}</label>
   </div>
   {{/if}}
   <div style="display:flex;flex-direction:row;flex-wrap:nowrap;align-items:center;">
-    <select id="actor-filter" name="actor-filter">
+    <select id="ach-actor-filter" name="ach-actor-filter">
       <option value="" {{#if (eq seluuid "")}}selected{{/if}}>{{localize "fvtt-player-achievements.forms.achievements-sheet.all-actors"}}</option>
       <option value="online" {{#if (eq seluuid "online")}}selected{{/if}}>{{localize "fvtt-player-achievements.forms.achievements-sheet.online-actors"}}</option>
       {{#each currentCharacters as |character|}}
@@ -46,24 +46,28 @@
     </select>
   <input
       type="text"
+      id="achievement_filter_input"
       name="achievement_filter"
       value="{{currentFilter}}"
       placeholder="{{localize "fvtt-player-achievements.forms.achievements-sheet.filter"}}"
       class="achievements-sheet__filter"
     >
-    <button type="button" name="filter-azza" class="btn btn--primary achievements-sheet__filter-azza" style="width:50px;">
+    <button data-action="onFilterChange" id="achievements-sheet__filter_button" type="button" name="achievement-filter-button" class="btn btn--primary achievements-sheet__filter_button" style="width:50px;">
+        <i class="fas fa-magnifying-glass"></i>
+    </button>
+  </div>
+  <div style="display:flex;flex-direction:row;flex-wrap:nowrap;align-items:center;">
+    <button data-action="onSort" type="button" name="filter-azza" class="btn btn--primary achievements-sheet__filter-azza" style="width:50px;">
       {{#if sortza}}
         <i class="fas fa-sort-alpha-up"></i>
       {{else}}
         <i class="fas fa-sort-alpha-down"></i>
       {{/if}}
     </button>
-  </div>
-  <div style="display:flex;flex-direction:row;flex-wrap:nowrap;align-items:center;">
-    <input type="checkbox" name="hide-details" id="hide-details" class="achievements-sheet__hide-details" {{#if hideDetails}}checked{{/if}}>
+    <input data-action="onToggleHideDetails" type="checkbox" name="hide-details" id="hide-details" class="achievements-sheet__hide-details" {{#if hideDetails}}checked{{/if}}>
     <label for="hide-details">{{localize "fvtt-player-achievements.forms.achievements-sheet.hide-details"}}</label>
     {{#if isDM}}
-    <input type="checkbox" name="only-online" id="only-online" class="achievements-sheet__only-online" {{#if onlyOnline}}checked{{/if}}>
+    <input data-action="onToggleOnlyOnline" type="checkbox" name="only-online" id="only-online" class="achievements-sheet__only-online" {{#if onlyOnline}}checked{{/if}}>
     <label for="only-online">{{localize "fvtt-player-achievements.forms.achievements-sheet.only-online-actors"}}</label>
     {{/if}}
   </div>
